--- a/src/components/Main slide/MainSlide.module.css
+++ b/src/components/Main slide/MainSlide.module.css
@@ -5,16 +5,18 @@ visibility:hidden;
     display: flex;
     justify-content: center;
     @media (max-width: 1050px){
-        background-image:url('/src/assets/images/Rectangle2.jpg');
+        background-image:url('/src/assets/images/Rectangle2Mob.png');
         color:white;
         background-position: center; 
         padding-top: 5px;
         width: 100%;
+        background-repeat: no-repeat;
+        background-size:cover;        
     }
     @media (min-width: 1050px) and (max-width: 1280px) { 
         width: 100%; /* Ширина контейнера */
         height: 100%; /* Высота контейнера */
-        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2.jpg');
+        background-image: url('/src/assets/images/Rectangle 1.png'), url('/src/assets/images/Rectangle2Mob.png');
         background-size: 20% 100%, 80% 100%; /* Размеры изображений */
         background-position: left center, right center; /* Позиционирование изображений */
         background-repeat: no-repeat;
