--- a/src/components/ContactsComponent/Contacts.module.css
+++ b/src/components/ContactsComponent/Contacts.module.css
@@ -20,44 +20,13 @@
     position:relative;
     padding-left:2%;
     padding-right:2%;
-    /* padding-top:60px;
-    padding-bottom:60px; */
-    @media(min-width:1300px){
-        padding-top:120px;
-        padding-bottom:120px;
-    }
     border-left: 1px solid rgba(43, 61, 82, 0.30);
     border-right: 1px solid rgba(43, 61, 82, 0.30);
 }
 .contacts__content_container{
     max-width: 1600px;
 }
-.contacts__content_positioning{
-    @media(max-width:800px){
-        display:flex;
-        flex-direction:column;
-        align-items:center;
-        justify-content:center;
-    }
-    @media(min-width:801px) and (max-width:1100px){
-        display:grid;
-        grid-template-columns:55% 45%;
-        align-items:center;
-        justify-content:center;
-    }
-    @media(min-width:1101px) and (max-width:1500px){
-        display:grid;
-        grid-template-columns:65% 35%;
-        align-items:center;
-        justify-content:center;
-    }
-    @media(min-width:1501px){
-        display:grid;
-        grid-template-columns:40% 60%;
-        align-items:center;
-        justify-content:center;
-    }
-}
+
 .contacts__content_bg{
     @media (max-width:800px){
         opacity:0.9;
@@ -104,26 +73,6 @@
     }
 }
 
-.contacts__content_header{
-    text-align: center;
-    font-style: normal;
-    font-weight: 600;
-    @media(max-width:800px){
-        font-size: 20px;
-        line-height: 32px;
-        padding-bottom:50px;
-    }
-    @media(min-width:801px) and (max-width:1500px){
-        font-size: 32px;
-        line-height: 42px;
-        padding-bottom:40px;
-    }
-    @media(min-width:1501px){
-        font-size: 36px;
-        line-height: 46px;
-        padding-bottom:80px;
-    }
-}
 .contacts__content_image{
     @media(max-width:800px){
         width:70%;
@@ -135,106 +84,91 @@
     }
 }
 .contacts__content_gallery{
-    @media(max-width:650px){
-        padding-top:60px;
+    padding-top:60px;
+    @media(max-width:900px){
         gap:20px;
         display:flex;
         flex-direction:column;
         align-items:center;
     }
-    @media(min-width:651px) and (max-width:1500px){
-        padding-top:60px;
-        gap:20px;
-        display:flex;
-        /* flex-direction:column; */
-    }
-    @media(min-width:1501px){
+    @media(min-width:901px){
         display:grid;
         grid-template-columns:30% 30% 30%;
-        gap:30px;
         
+        gap:3%;
+        width:100%;
     }
 }
 .contacts__icon{
     display:flex;
     align-items:center;
     justify-content:center;
+    @media(max-width:900px){
+        max-width: 45px;
+        max-height: 60px;
+    }
+    @media(min-width:901px) and (max-width:1100px){
+        max-width: 45px;
+        max-height: 60px;
+    }
+    @media(min-width:1501px){
+        max-width: 60px;
+        max-height: 82px;
+    }
 }
 .contacts_element_in{
     display:flex;
     padding:20px 24px 20px 24px;
-    gap:10%;
+    @media(max-width:900px){
+        padding:20px;
+        gap:5%;
+    }
+    @media(min-width:901px) and (max-width:1100px){
+        padding:20px 24px 20px 24px;
+    }
+    @media(min-width:1501px){
+        padding:40px;
+    }
 }
 .contacts__content_gallery_element{
     border: 1px solid rgba(85, 122, 161, 0.30);
     background: #23303F;
     
-    @media(max-width:850px){
+    @media(max-width:900px){
         gap:10%;
         width:70%;
         min-width:290px;
         min-height:110px;
     }
-    @media(min-width:851px) and (max-width:1300px){
-        /* display:grid;
-        grid-template-columns:50% 50%; */
+    @media(min-width:901px) and (max-width:1500px){
+
         display:flex;
-        gap:10%;
-        width:100%;
-        min-width: 340px;
-        min-height: 130px;
-    }
-    @media(min-width:1301px) and (max-width:1500px){
-        display:grid;
-        grid-template-columns:60% 40%;
-        
-        justify-content:space-between;
-        min-width: 340px;
-        min-height: 130px;
+        align-items:center;
+        min-width:250px;
+        min-height:110px;
     }
     @media(min-width:1501px){
-        display:grid;
-        grid-template-columns:60% 40%;
-        justify-content:space-between;
-        min-width: 360px;
-        min-height: 175px;
+        min-width: 410px;
+        min-height: 140px;
     } 
 }
-.contacts__content_gallery_element_text{
-    position:relative;
-    @media(max-width:650px){
-        padding:14px 0px 14px 10px;
-        display:flex;
-        justify-content:center;
-        flex-direction:column;
-    }
-    @media(min-width:651px) and (max-width:1500px){
-        padding:20px 0px 20px 35px;
-    }
-    @media(min-width:1501px){
-        padding:40px 0px 40px 35px;
-    }
-}
+
 .contacts__content_gallery_element_header{
     color: var(--light-blue-text);
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: normal;
-    @media(max-width:650px){
-        font-size: 16px;
-        padding-bottom:4px;
-    }
-    @media(min-width:651px) and (max-width:800px){
-        font-size: 20px;
-        padding-bottom:8px;
+    @media(max-width:800px){
+        font-size: 14px;
+        line-height: 28px;
     }
     @media(min-width:801px) and (max-width:1500px){
-        font-size: 25px;
-        padding-bottom:10px;
+        font-size: 16px;
+        line-height: 32px;
     }
     @media(min-width:1501px){
-        font-size: 30px;
-        padding-bottom:14px;
+        font-size: 22px;
+        line-height: 32px;
     }
 }
 .contacts__content_gallery_element_paragraph{
@@ -254,24 +188,22 @@
         line-height: 22px; /* 137.5% */
     }
 }
-.contacts__content_gallery_element_number{
-    color: #BCC9DA;
-    opacity: 0.08;
-    text-align: right;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    padding-right:20px;
-    @media(max-width:650px){
-        font-size: 30px;
+.contacts__map_container{
+    padding-top:30px;
+    @media(max-width:900px){
+        gap:20px;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
     }
-    @media(min-width:651px) and (max-width:800px){
-        font-size: 45px;
+    @media(min-width:901px){
+        display:grid;
+        grid-template-columns:33% 63%;
+        gap:4%;
+        width:100%;
     }
-    @media(min-width:801px) and (max-width:1500px){
-        font-size: 62px;
-    }
-    @media(min-width:1501px){
-        font-size: 72px;
-    }
+}
+.contacts_picture{
+    background-image:url('/src/assets/images/Rectangle 1.png');
+    
 }
